client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 32000
