server-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: server-service
spec: 
  type: NodePort
  selector: 
    app: server
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 31000
